test/parser/error/err_18_array_missing_subscript.pl0
program p; 
var arr[1]; 
begin 
arr := 1 
end